--- a/config.env
+++ b/config.env
@@ -9,7 +9,7 @@ AUTO_REPLY='no'
 AUTO_READ='no'
 AUTO_SAVE_CONTACTS='no'
 AUTO_BIO='yes'
-OWNER_NAME= "᚛Ibrahim adams᚜"
+OWNER_NAME= "᚛KING RAVI᚜"
 PORT=3000
 DATABASE_URL= "postgresql://postgres:bKlIqoOUWFIHOAhKxRWQtGfKfhGKgmRX@viaduct.proxy.rlwy.net:47738/railway"
 WARN_COUNT= ""
@@ -20,7 +20,7 @@ ANTIDELETE1='yes'
 ANTIDELETE2='yes'
 MENUTYPE='1'
 PRESENCE=''
-AUDIO_REPLY='yes'
+AUDIO_REPLY='no'
 NUMERO_OWNER= "254xxxxx"
 SESSION_ID=''
 
